--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My AngularJS App</title>
     <link rel="stylesheet" href="css/app.css"/>
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body  style="padding: 10px;">
 
